--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=neskovek_tests-prova03-gustavogoulart
 sonar.organization=neskovek
 sonar.projectName=tests-prova03-gustavogoulart
 sonar.projectVersion=1.0
-sonar.sources=./test
+#sonar.sources=./test
 sonar.sourceEncoding=UTF-8
